# voo-tv

./: README.md  setup.cfg
.github/workflows/: linter.yml
src/interactive_agent/: __init__.py  __main__.py  chatbot.py  chatbot_model.h5  classes.pkl  index.htm  intent.xlsx  intents.json  interactive_agent.py  train.py  words.pkl
src/interactive_agent/static/css/: app.css
src/interactive_agent/static/js/: app.js
src/voo_evasion/: __init__.py  __main__.py  evasion.py  evasion_keys.json  remote.py  voo_evasion.py
