[metadata]
name = voo_evasion
version = 0.0.5
author = Vincent Stragier
author_email = vincent.stragier@outlook.com
description = A Python module for the .évasion box.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2010019970909/voo-tv
project_urls =
    Bug Tracker = https://github.com/2010019970909/voo-tv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6, <4
install_requires =
    requests >= 2.27.1
    netifaces >= 0.11.0

[options.packages.find]
where = src

[options.package_data]
* = *.json
